@@ -2,6 +2,7 @@ package com.aurionpro.service.impl;
 
 import java.math.BigDecimal;
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -10,6 +11,7 @@ import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -56,55 +58,44 @@ public class PayrollBatchServiceImpl implements PayrollBatchService {
     @Override
     @Transactional
     public DisbursalBatchResponseDTO createBatch(Long orgId, DisbursalBatchCreateDTO dto, String createdBy) {
-        // 1. Validate organization exists and is approved
         Organization org = organizationRepository.findById(orgId)
                 .orElseThrow(() -> new ResourceNotFoundException("Organization not found with ID: " + orgId));
-        
+
         if (org.getStatus() != Organization.Status.APPROVED) {
             throw new IllegalStateException("Organization must be approved to create payroll batches");
         }
-        
-        // 2. Validate salary month is provided
+
         if (dto.getSalaryMonth() == null) {
             throw new IllegalArgumentException("Salary month is required");
         }
-        
-        // 3. Check for duplicate batch for same org and month
+
         if (batchRepository.existsByOrganizationIdAndSalaryMonth(orgId, dto.getSalaryMonth())) {
             throw new IllegalArgumentException("Salary batch already exists for this organization and month: " 
                 + dto.getSalaryMonth());
         }
-        
-        // 4. Validate organization has verified payroll account
+
         bankAccountRepository.findFirstVerifiedOrgAccount(orgId)
-                .orElseThrow(() -> new IllegalStateException(
-                    "Organization does not have a verified payroll bank account"));
-        
-        // 5. Get employee list (specific IDs or all org employees)
+                .orElseThrow(() -> new IllegalStateException("Organization does not have a verified payroll bank account"));
+
         List<Employee> employees = (dto.getEmployeeIds() != null && !dto.getEmployeeIds().isEmpty())
                 ? employeeRepository.findAllById(dto.getEmployeeIds()).stream()
                         .filter(e -> e.getOrganization().getId().equals(orgId))
                         .collect(Collectors.toList())
-                : org.getEmployees() == null
-                        ? List.of()
-                        : org.getEmployees().stream()
-                                .collect(Collectors.toList());
+                : org.getEmployees() == null ? List.of() : org.getEmployees().stream().collect(Collectors.toList());
 
-        // 6. Filter only eligible employees (ACTIVE + has salary template + verified bank account)
         List<Employee> eligibleEmployees = employees.stream()
                 .filter(e -> e.getStatus() == Employee.Status.ACTIVE)
                 .filter(e -> e.getSalaryTemplate() != null)
                 .filter(e -> hasVerifiedBankAccount(e.getId()))
-                .collect(Collectors.toList());
+                .toList();
 
         if (eligibleEmployees.isEmpty()) {
             throw new IllegalArgumentException("No eligible employees found. Employees must be ACTIVE, have salary template, and verified bank account.");
         }
 
-        // 7. Create disbursal lines
         HashSet<DisbursalLine> lines = new HashSet<>();
         BigDecimal total = BigDecimal.ZERO;
-        
+
         for (Employee e : eligibleEmployees) {
             BigDecimal amt = computeNet(e);
             DisbursalLine line = DisbursalLine.builder()
@@ -116,7 +107,6 @@ public class PayrollBatchServiceImpl implements PayrollBatchService {
             total = total.add(amt);
         }
 
-        // 8. Create batch
         DisbursalBatch batch = DisbursalBatch.builder()
                 .organization(org)
                 .salaryMonth(dto.getSalaryMonth())
@@ -126,11 +116,11 @@ public class PayrollBatchServiceImpl implements PayrollBatchService {
                 .build();
 
         lines.forEach(l -> l.setBatch(batch));
-        batch.setLines(lines);
+        batch.setLines(new ArrayList<>(lines));
+
 
         DisbursalBatch saved = batchRepository.save(batch);
 
-        // 9. Send notifications
         if (bankAdminInbox != null && !bankAdminInbox.isBlank()) {
             emailService.sendBatchPendingReview(
                     bankAdminInbox,
@@ -158,7 +148,6 @@ public class PayrollBatchServiceImpl implements PayrollBatchService {
                 && acc.getKycStatus() == BankAccount.KYCDocumentVerificationStatus.VERIFIED);
     }
 
-
     // ------------------ LIST PENDING ------------------
     @Override
     @Transactional(readOnly = true)
@@ -167,37 +156,29 @@ public class PayrollBatchServiceImpl implements PayrollBatchService {
         return batches.map(this::toResponse);
     }
 
-
-
-
     // ------------------ REVIEW BATCH ------------------
     @Override
     @Transactional
     public void reviewBatch(DisbursalBatchApprovalDTO dto) {
-        // 1. Validate batch exists
         DisbursalBatch batch = batchRepository.findById(dto.getBatchId())
                 .orElseThrow(() -> new ResourceNotFoundException("Batch not found with ID: " + dto.getBatchId()));
 
-        // 2. Validate batch is in PENDING status
         if (batch.getStatus() != DisbursalBatch.Status.PENDING) {
             throw new IllegalStateException("Only PENDING batches can be reviewed. Current status: " 
                 + batch.getStatus());
         }
 
-        // 3. Validate approval decision is provided
         if (dto.getApprove() == null) {
             throw new IllegalArgumentException("Approval decision must be provided");
         }
 
         Organization org = batch.getOrganization();
 
-        // 4. Handle rejection
         if (!Boolean.TRUE.equals(dto.getApprove())) {
-            // Rejection reason is mandatory
             if (dto.getRejectionReason() == null || dto.getRejectionReason().trim().isEmpty()) {
                 throw new IllegalArgumentException("Rejection reason is required when rejecting batch");
             }
-            
+
             batch.setStatus(DisbursalBatch.Status.REJECTED);
             batch.setRejectionReason(dto.getRejectionReason().trim());
             batch.setApprovedBy(dto.getReviewer());
@@ -215,15 +196,12 @@ public class PayrollBatchServiceImpl implements PayrollBatchService {
             return;
         }
 
-        // 5. Handle approval - check org has verified payroll account
         BankAccount orgAccount = bankAccountRepository.findFirstVerifiedOrgAccount(org.getId())
                 .orElseThrow(() -> new IllegalStateException("Organization has no verified payroll account"));
 
-        // 6. Lock account for update
         BankAccount locked = bankAccountRepository.findByIdForUpdate(orgAccount.getId())
                 .orElseThrow(() -> new ResourceNotFoundException("Payroll account not found"));
 
-        // 7. Check sufficient balance
         BigDecimal available = locked.getBalance();
         BigDecimal required = batch.getTotalAmount();
 
@@ -247,18 +225,15 @@ public class PayrollBatchServiceImpl implements PayrollBatchService {
             return;
         }
 
-        // 8. Deduct total amount from org account
         locked.setBalance(available.subtract(required));
         bankAccountRepository.save(locked);
 
-        // 9. Mark batch as approved
         batch.setStatus(DisbursalBatch.Status.APPROVED);
         batch.setRejectionReason(null);
         batch.setApprovedBy(dto.getReviewer());
         batch.setApprovedAt(Instant.now());
         batchRepository.save(batch);
 
-        // 10. Notify org admin
         if (org.getAdminUser() != null && org.getAdminUser().getEmail() != null) {
             emailService.sendBatchApproved(
                     org.getAdminUser().getEmail(),
@@ -268,7 +243,6 @@ public class PayrollBatchServiceImpl implements PayrollBatchService {
                     batch.getId());
         }
     }
-
 
     // ------------------ EXECUTE APPROVED BATCH ------------------
     @Override
@@ -283,12 +257,14 @@ public class PayrollBatchServiceImpl implements PayrollBatchService {
 
         List<DisbursalLine> lines = lineRepository.findByBatchId(batchId);
 
-        int total = 0, paid = 0, skipped = 0;
+        int total = lines.size();
+        int paid = 0;
+        int skipped = 0;
 
         for (DisbursalLine line : lines) {
-            total++;
             boolean alreadyPaid = line.getStatus() == DisbursalLine.Status.PAID;
             boolean payslipExists = payslipRepository.findByLineId(line.getId()).isPresent();
+
             if (alreadyPaid && payslipExists) {
                 skipped++;
                 continue;
@@ -296,7 +272,6 @@ public class PayrollBatchServiceImpl implements PayrollBatchService {
 
             Employee e = line.getEmployee();
             ComponentBreakdown comp = computeComponents(e);
-
             String txRef = java.util.UUID.randomUUID().toString();
 
             if (!alreadyPaid) {
@@ -351,6 +326,7 @@ public class PayrollBatchServiceImpl implements PayrollBatchService {
 
         boolean allPaid = lineRepository.findByBatchId(batchId).stream()
                 .allMatch(l -> l.getStatus() == DisbursalLine.Status.PAID);
+
         if (allPaid) {
             batch.setStatus(DisbursalBatch.Status.COMPLETED);
             batchRepository.save(batch);
@@ -359,7 +335,14 @@ public class PayrollBatchServiceImpl implements PayrollBatchService {
         return new ExecutionSummary(total, paid, skipped, batch.getStatus().name());
     }
 
-    // ------------------ HELPERS ------------------
+    private String getCurrentUsername() {
+        try {
+            return SecurityContextHolder.getContext().getAuthentication().getName();
+        } catch (Exception e) {
+            return "SYSTEM";
+        }
+    }
+
     private BigDecimal computeNet(Employee e) {
         if (e.getSalaryTemplate() == null) {
             throw new IllegalArgumentException("Employee " + e.getId() + " has no salary template");
@@ -409,11 +392,22 @@ public class PayrollBatchServiceImpl implements PayrollBatchService {
         return DisbursalBatchResponseDTO.builder()
                 .batchId(b.getId())
                 .organizationId(b.getOrganization().getId())
+                .organizationName(b.getOrganization().getName())
                 .salaryMonth(b.getSalaryMonth())
                 .totalAmount(b.getTotalAmount())
                 .status(b.getStatus().name())
+                .createdAt(b.getCreatedAt())
+                .createdBy(b.getCreatedBy())
                 .lines(lineDtos)
                 .build();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<DisbursalBatchResponseDTO> listApprovedBatches() {
+        return batchRepository.findByStatus(DisbursalBatch.Status.APPROVED).stream()
+                .map(this::toResponse)
+                .collect(Collectors.toList());
     }
 
     @Getter
@@ -426,4 +420,3 @@ public class PayrollBatchServiceImpl implements PayrollBatchService {
         private final BigDecimal net;
     }
 }
-
